--- a/roelof.html
+++ b/roelof.html
@@ -56,25 +56,37 @@
         </div>
         <div class="reviews">
             <div class="review">
-                <img src="./images/image-colton.jpg">
-                <p class="name">Colton Smith</p>
-                <p class="buyer">Verified Buyer</p>
+                <div class="personal">
+                    <img src="./images/image-colton.jpg">
+                    <div class="personal_data">
+                        <p class="name">Colton Smith</p>
+                        <p class="buyer">Verified Buyer</p>
+                    </div>    
+                </div>
                 <p class="text">
                     "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
                 </p>
             </div>
             <div class="review">
-                <img src="./images/image-irene.jpg">
-                <p class="name"> Irene Roberts</p>
-                <p class="buyer">Verified Buyer</p>
+                <div class="personal">
+                    <img src="./images/image-irene.jpg">
+                    <div class="personal_data">
+                        <p class="name"> Irene Roberts</p>
+                        <p class="buyer">Verified Buyer</p>
+                    </div>
+                </div>    
                 <p class="text">
                     "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery. "
                 </p>
             </div>
             <div class="review">
-                <img src="./images/image-anne.jpg">
-                <p class="name">Anne Wallace</p>
-                <p class="buyer">Verified Buyer</p>
+                <div class="personal">
+                    <img src="./images/image-anne.jpg">
+                    <div class="personal_data">
+                        <p class="name">Anne Wallace</p>
+                        <p class="buyer">Verified Buyer</p>
+                    </div>
+                </div>    
                 <p class="text">
                     "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone! "
                 </p>
