--- a/roelof.html
+++ b/roelof.html
@@ -32,7 +32,7 @@
                     </div>
                     <p>Rated 5 Stars in Reviews</p>
                 </div>
-                <div class="rating ">
+                <div class="rating rating2">
                     <div class="rating_stars ">
                         <img src="./images/icon-star.svg ">
                         <img src="./images/icon-star.svg ">
