--- a/roelof.html
+++ b/roelof.html
@@ -18,11 +18,11 @@
     <div class="container">
         <div class="top">
             <div class="tekst">
-                <h1> 10,000+ of our users love our products. </h1>
+                <h1> 10,000+ of our <br> users love our <br>products. </h1>
                 <p> We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
             </div>
-            <div class="ratings ">
-                <div class="rating ">
+            <div class="ratings">
+                <div class="rating">
                     <div class="rating_stars ">
                         <img src="./images/icon-star.svg ">
                         <img src="./images/icon-star.svg ">
@@ -32,8 +32,8 @@
                     </div>
                     <p>Rated 5 Stars in Reviews</p>
                 </div>
-                <div class="rating rating2">
-                    <div class="rating_stars ">
+                <div class="rating">
+                    <div class="rating_stars">
                         <img src="./images/icon-star.svg ">
                         <img src="./images/icon-star.svg ">
                         <img src="./images/icon-star.svg ">
@@ -42,7 +42,7 @@
                     </div>
                     <p>Rated 5 Stars in Report Guru</p>
                 </div>
-                <div class="rating ">
+                <div class="rating">
                     <div class="rating_stars ">
                         <img src="./images/icon-star.svg ">
                         <img src="./images/icon-star.svg ">
